# ball-stencil

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
ball_stencil/: __init__.py  __main__.py  config.py  export.py  mapping.py  meshbuild.py  meshcheck.py  pipeline.py  raster.py  svgio.py  tessellate.py
tests/: test_edge_smoothness.py  test_raster_trace.py
tools/: ball_texture.config.json  build_ball_texture.py  photo_register.html  texture_preview.html
tools/wear/: README.md  build_replace.py  build_wear.py  review.html  wear.config.json
tools/wilson_mask/: README.md  make_wilson_mask.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pwa-assets.config.ts  tsconfig.json  vite.config.ts
web/e2e/: app.spec.ts  pwa.spec.ts  trace.spec.ts
web/fixtures/: gen_golden.py  golden.json
web/src/: color.ts  glyph.ts  imagetracerjs.d.ts  main.ts  opentype.js.d.ts  persist.ts  pwa.ts  style.css  sw.ts  trace.worker.ts  viewer.ts  worker.ts
web/src/pipeline/: clip.ts  config.ts  exportmesh.ts  mapping.ts  meshbuild.ts  meshcheck.ts  offset.ts  pipeline.ts  svg.ts  svgio.ts  tessellate.ts  trace.ts
web/src/ui/: sheet.ts
web/tests/: glyph.test.ts  golden.ts  pipeline.test.ts  svg.test.ts  trace.test.ts
